[gd_scene load_steps=3 format=2]

[ext_resource path="res://gamemode/Default.tscn" type="PackedScene" id=1]
[ext_resource path="res://gamemode/KotH.gd" type="Script" id=2]

[node name="KotH" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="PickTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="KingTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 60.0
one_shot = false
autostart = false

[connection signal="timeout" from="PickTimer" to="." method="_on_PickTimer_timeout"]

[connection signal="timeout" from="KingTimer" to="." method="_on_KingTimer_timeout"]


